[package]
name = "tuitactoe"
version = "0.1.0"
authors = ["grvxs <gauravsinghsisodia5@gmail.com>"]
edition = "2018"
description = "TicTacToe in your terminal."
keywords = ["tui", "tictactoe"]
repository = "https://github.com/grvxs/tuitactoe"
license = "Apache-2.0"
readme = "./README.md"

[dependencies]
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
rand = "0.8.3"
