[package]
name = "tictactoe"
version = "0.1.4"
authors = ["grvxs <gauravsinghsisodia5@gmail.com>"]
edition = "2018"
description = "TicTacToe in your terminal."
keywords = ["tui", "tictactoe", "game"]
repository = "https://github.com/grvxs/tictactoe"
license = "GPL-3.0"
readme = "./README.md"

[dependencies]
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
rand = "0.8.3"
